objects/FN__FindNearby__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FN__Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want Accounts located and displayed on a map?</inlineHelpText>
        <label>Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Accuracy__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>How Accurate do you require the Geolocation to be? 

The Higher the number, the higher the quality threshold on Addresses. 

Values should only be:(1-9)  Recommend 7.

1 - Country 
4 - Postal Code
9 - Specific Building</inlineHelpText>
        <label>Accuracy</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want Contacts located and displayed on a map?</inlineHelpText>
        <label>Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__GKey__c</fullName>
        <label>GKey</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__How_Many__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>How many records of each type can show up on a map at any one time. (1-200 recommended)</inlineHelpText>
        <label>How Many</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Leads__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want Leads to be located and displayed on the maps?</inlineHelpText>
        <label>Leads</label>
        <type>Checkbox</type>
    </fields>
    <label>FindNearbySettings</label>
</CustomObject>